# solana-thunder

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/aggregator/: Cargo.toml
crates/aggregator/examples/: simulate_swap.rs  test_price.rs  trade_simulator.rs
crates/aggregator/src/: cache.rs  cli.rs  lib.rs  loader.rs  main.rs  pool_index.rs  price.rs  router.rs  stats.rs  swap_builder.rs  transaction.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  lib.rs  traits.rs
crates/engine/: Cargo.toml
crates/engine/src/: account_store.rs  api.rs  cold_start.rs  lib.rs  pool_registry.rs  streaming.rs  swap.rs
crates/engine/tests/: api_test.rs
crates/meteora-damm/: Cargo.toml
crates/meteora-damm/src/: lib.rs  models.rs  utils.rs
crates/meteora-dlmm/: Cargo.toml
crates/meteora-dlmm/src/: lib.rs
crates/pumpfun-amm/: Cargo.toml
crates/pumpfun-amm/src/: lib.rs  pda.rs
crates/raydium-amm-v4/: Cargo.toml
crates/raydium-amm-v4/src/: lib.rs
crates/raydium-clmm/: Cargo.toml
crates/raydium-clmm/src/: lib.rs  tick_arrays.rs
crates/router-program/: Cargo.toml
crates/router-program/src/: lib.rs
crates/router-program/src/adapters/: common.rs  meteora_damm_v1.rs  meteora_damm_v2.rs  meteora_dlmm.rs  mod.rs  pumpfun.rs  raydium_clmm.rs  raydium_v4.rs
docs/: ROADMAP.md
docs/specs/: 2026-03-25-iced-token-pool-viewer.md
docs/superpowers/plans/: 2026-04-01-thunder-engine.md  2026-04-02-thunder-router-only.md  2026-04-02-thunder-router-v2.md  2026-04-02-thunder-router-v3-okx-pattern.md
docs/superpowers/specs/: 2026-03-31-aggregator-design.md  2026-04-01-thunder-engine-design.md
src/: lib.rs
tests/: creation_stream.rs  pool_financials.rs  simulate_swap.rs  surfpool_swap.rs  trade_stream.rs  validate_prices.rs
tests/helpers/: mod.rs
